# verplant

./: README.md  erm.drawio
backend/: .gitignore  Cargo.toml  README.md  Rocket.toml  verplant.csr  verplant.pem  verplant.sqlite3
backend/migrations/2021-03-28-133814_create_persons/: down.sql  up.sql
backend/migrations/2021-03-28-145756_create_providers/: down.sql  up.sql
backend/migrations/2021-03-28-145805_create_customers/: down.sql  up.sql
backend/migrations/2021-03-28-145815_create_courses/: down.sql  up.sql
backend/migrations/2021-03-28-145837_create_rooms/: down.sql  up.sql
backend/migrations/2021-03-28-150050_create_appointments/: down.sql  up.sql
backend/migrations/2021-03-28-150451_create_books/: down.sql  up.sql
backend/migrations/2021-03-28-150637_create_conducts/: down.sql  up.sql
backend/migrations/2021-03-28-190718_edit_courses_type/: down.sql  up.sql
backend/migrations/2021-03-30-180457_edit_providers/: down.sql  up.sql
backend/migrations/2021-04-06-155600_edit_books/: down.sql  up.sql
backend/migrations/2021-04-06-200643_edit_appointments/: down.sql  up.sql
backend/migrations/2021-04-08-214730_edit_appointments/: down.sql  up.sql
backend/migrations/2021-04-21-190638_edit_courses/: down.sql  up.sql
backend/src/: error.rs  http_api.rs  main.rs  models.rs  schema.rs
backend/src/db/: insertable.rs  mod.rs  models.rs  schema.rs
backend/src/http_api/: auth.rs  authenticated.rs  customer.rs  mod.rs
frontend/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  CustomerService.ts  api.ts  main.ts  store.ts  translations.ts  utils.ts
frontend/src/components/: AppointmentList.vue  AppointmentPicker.vue  InfoDialog.vue
frontend/src/router/: index.ts
frontend/src/views/: 404.vue  Appointments.vue  ContactInformation.vue  Home.vue  HomeCard.vue  Login.vue
