[package]
name = "verplant"
version = "0.1.0"
authors = ["Corin Baurmann <corin.baurmann@gmail.com>", "Matthias Kind <matze.kind@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["sqlite"] }
rocket = { version = "0.4.7" } #, features = ["tls"] }
serde = { version = "1.0.125", features = ["derive"] }
jsonwebtoken = "7.2.0"
pwhash = "1"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_sqlite_pool", "json"]