[package]
name = "verplant"
version = "0.1.0"
authors = ["Corin Baurmann <corin.baurmann@gmail.com>", "Matthias Kind <matze.kind@web.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0", features = ["sqlite"] }
serde = { version = "1.0.125", features = ["derive"] }
jsonwebtoken = "7.2.0" 
pwhash = "1"
time = "0.1.43"
log = "0.4.14"
env_logger = "0.8.3"
thiserror = "1.0.24"
# rocket = { version = "0.5.0-rc.2", features = ["json"]} 

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "6c3d35e"
features = ["json"]

[dependencies.rocket_sync_db_pools]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "6c3d35e"
default-features = false
features = ["diesel_sqlite_pool"]